Сверстал страницу оформления заказа

--- a/cart.html
+++ b/cart.html
@@ -280,7 +280,7 @@
                                                 59 800 ₽
                                             </p>
                                         </div>
-                                        <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                        <a class="rect-btn rect-btn--cart-popup blue" href="./order.html">
                                             Оформить заказ
                                         </a>
                                     </div>
@@ -557,7 +557,7 @@
                                                 59 800 ₽
                                             </p>
                                         </div>
-                                        <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                        <a class="rect-btn rect-btn--cart-popup blue" href="./order.html">
                                             Оформить заказ
                                         </a>
                                     </div>
@@ -946,7 +946,7 @@
                             </svg>
                             Главная
                         </a>
-                        <span>/</span>
+                        <span class="slash">/</span>
                     </li>
                     <li class="breadcrumbs__item current">
                         <span>Корзина</span>
@@ -1470,7 +1470,7 @@
                     <p class="cart-empty__text">
                         Добавьте в нее товары из каталога
                     </p>
-                    <a class="rect-btn rect-btn--cart-empty blue" href="./catalog.html">
+                    <a class="rect-btn rect-btn--cart-empty blue" href="#">
                         Перейти в каталог
                     </a>
                 </div>
@@ -1626,7 +1626,10 @@
                                 </div>
                             </div>
                             <div class="product-card__footer-buttons">
-                                <div class="product-card__counter">
+                                <button class="product-card__buy-cart transparent">
+                                    Добавить в корзину
+                                </button>
+                                <div class="product-card__counter hide">
                                     <button class="minus">-</button>
                                     <span>1</span>
                                     <button class="plus">+</button>
@@ -1660,17 +1663,9 @@
                                     <div class="thumb">
                                         <img src="./img/card-gallery/3.webp" alt="">
                                     </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/4.webp" alt="">
-                                    </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/5.webp" alt="">
-                                    </div>
                                 </div>
                                 <div class="thumbs-progressbar">
                                     <div class="progressbar-item current"></div>
-                                    <div class="progressbar-item"></div>
-                                    <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                 </div>
@@ -1783,7 +1778,10 @@
                                 </div>
                             </div>
                             <div class="product-card__footer-buttons">
-                                <div class="product-card__counter">
+                                <button class="product-card__buy-cart transparent">
+                                    Добавить в корзину
+                                </button>
+                                <div class="product-card__counter hide">
                                     <button class="minus">-</button>
                                     <span>1</span>
                                     <button class="plus">+</button>
@@ -1817,17 +1815,9 @@
                                     <div class="thumb">
                                         <img src="./img/card-gallery/3.webp" alt="">
                                     </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/4.webp" alt="">
-                                    </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/5.webp" alt="">
-                                    </div>
                                 </div>
                                 <div class="thumbs-progressbar">
                                     <div class="progressbar-item current"></div>
-                                    <div class="progressbar-item"></div>
-                                    <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                 </div>
@@ -1940,7 +1930,10 @@
                                 </div>
                             </div>
                             <div class="product-card__footer-buttons">
-                                <div class="product-card__counter">
+                                <button class="product-card__buy-cart transparent">
+                                    Добавить в корзину
+                                </button>
+                                <div class="product-card__counter hide">
                                     <button class="minus">-</button>
                                     <span>1</span>
                                     <button class="plus">+</button>
@@ -1974,17 +1967,9 @@
                                     <div class="thumb">
                                         <img src="./img/card-gallery/3.webp" alt="">
                                     </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/4.webp" alt="">
-                                    </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/5.webp" alt="">
-                                    </div>
                                 </div>
                                 <div class="thumbs-progressbar">
                                     <div class="progressbar-item current"></div>
-                                    <div class="progressbar-item"></div>
-                                    <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                 </div>
@@ -2097,7 +2082,10 @@
                                 </div>
                             </div>
                             <div class="product-card__footer-buttons">
-                                <div class="product-card__counter">
+                                <button class="product-card__buy-cart transparent">
+                                    Добавить в корзину
+                                </button>
+                                <div class="product-card__counter hide">
                                     <button class="minus">-</button>
                                     <span>1</span>
                                     <button class="plus">+</button>
@@ -2131,17 +2119,9 @@
                                     <div class="thumb">
                                         <img src="./img/card-gallery/3.webp" alt="">
                                     </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/4.webp" alt="">
-                                    </div>
-                                    <div class="thumb">
-                                        <img src="./img/card-gallery/5.webp" alt="">
-                                    </div>
                                 </div>
                                 <div class="thumbs-progressbar">
                                     <div class="progressbar-item current"></div>
-                                    <div class="progressbar-item"></div>
-                                    <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                     <div class="progressbar-item"></div>
                                 </div>
@@ -2254,7 +2234,10 @@
                                 </div>
                             </div>
                             <div class="product-card__footer-buttons">
-                                <div class="product-card__counter">
+                                <button class="product-card__buy-cart transparent">
+                                    Добавить в корзину
+                                </button>
+                                <div class="product-card__counter hide">
                                     <button class="minus">-</button>
                                     <span>1</span>
                                     <button class="plus">+</button>
