--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                                 59 800 ₽
                                             </p>
                                         </div>
-                                        <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                        <a class="rect-btn rect-btn--cart-popup blue" href="./order.html">
                                             Оформить заказ
                                         </a>
                                     </div>
@@ -558,7 +558,7 @@
                                                 59 800 ₽
                                             </p>
                                         </div>
-                                        <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                        <a class="rect-btn rect-btn--cart-popup blue" href="./order.html">
                                             Оформить заказ
                                         </a>
                                     </div>
@@ -1309,7 +1309,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -1460,7 +1463,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -1611,7 +1617,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -1762,7 +1771,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -1913,7 +1925,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -2064,7 +2079,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -2215,7 +2233,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -2366,7 +2387,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -2517,7 +2541,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -2668,7 +2695,10 @@
                                             </div>
                                         </div>
                                         <div class="product-card__footer-buttons">
-                                            <div class="product-card__counter">
+                                            <button class="product-card__buy-cart transparent">
+                                                Добавить в корзину
+                                            </button>
+                                            <div class="product-card__counter hide">
                                                 <button class="minus">-</button>
                                                 <span>1</span>
                                                 <button class="plus">+</button>
@@ -3071,7 +3101,7 @@
                 <p class="brand-banner__text">
                     Кухонные стальные мойки сделанные вручную!
                 </p>
-                <a class="oval-btn oval-btn--brand-banner blue" href="#">
+                <a class="oval-btn oval-btn--brand-banner blue" href="./catalog.html">
                     Все товары бренда
                 </a>
                 <img class="brand-banner__img" src="./img/brands/gerda-banner.png" alt="">
