Пофиксил скрипты для зума, смены цветов и галереи

--- a/catalog.html
+++ b/catalog.html
@@ -5763,63 +5763,63 @@
                                     <ul class="product-box__colors-list">
                                         <div class="frame"></div>
                                         <li class="product-box__colors-item">
-                                            <input id="color-1" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-1">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-2" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-2">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-3" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-3">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-4" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-4">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-5" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-5">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-6" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-6">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-7" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-7">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-8" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-8">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-9" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-9">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-10" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-10">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-11" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-11">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                         <li class="product-box__colors-item">
-                                            <input id="color-12" type="radio" name="color">
-                                            <label class="product-box__colors-color" for="color-12">
+                                            <label class="product-box__colors-color">
+                                                <input type="radio" name="fastview-color">
                                             </label>
                                         </li>
                                     </ul>
