Настроил skeleton для всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -995,7 +995,7 @@
                                     Фильтр
                                 </h3>
                                 <div class="filter-items">
-                                    <div class="filter-item check">
+                                    <div class="filter-item check skeleton">
                                         <div class="filter-item__props">
                                             <ul class="filter-item__list">
                                                 <li class="filter-item__value">
@@ -1008,7 +1008,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="filter-item check">
+                                    <div class="filter-item check skeleton">
                                         <div class="filter-item__props">
                                             <ul class="filter-item__list">
                                                 <li class="filter-item__value">
@@ -1021,7 +1021,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="filter-item range">
+                                    <div class="filter-item range skeleton">
                                         <button class="filter-item__header">
                                             Цена
                                         </button>
@@ -1040,7 +1040,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="filter-item values">
+                                    <div class="filter-item values skeleton">
                                         <button class="filter-item__header">
                                             Тип монтажа
                                         </button>
@@ -1070,7 +1070,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="filter-item values collapse">
+                                    <div class="filter-item values collapse skeleton">
                                         <button class="filter-item__header">
                                             Цвет
                                         </button>
@@ -1110,7 +1110,7 @@
                                             Больше
                                         </button>
                                     </div>
-                                    <div class="filter-item range">
+                                    <div class="filter-item range skeleton">
                                         <button class="filter-item__header">
                                             Ширина встраивания
                                         </button>
@@ -1140,14 +1140,14 @@
                                     </button>
                                 </div> -->
     
-                                <button class="oval-btn oval-btn--filter show blue">
+                                <button class="oval-btn oval-btn--filter show blue skeleton">
                                     Показать
                                 </button>
-                                <button class="oval-btn oval-btn--filter reset transparent">
+                                <button class="oval-btn oval-btn--filter reset transparent skeleton">
                                     Сбросить
                                 </button>
                             </div>
-                            <div class="catalog__promo">
+                            <div class="catalog__promo skeleton">
                                 <div class="promo-box">
                                     <div class="promo-box__header">
                                         <h4 class="promo-box__title">
