--- a/product.html
+++ b/product.html
@@ -968,7 +968,7 @@
             <div class="product">
                 <div class="container">
                     <div class="product-box">
-                        <div class="product-box__name-box">
+                        <div class="product-box__name-box skeleton">
                             <p class="product-box__name">
                                 Варочная панель lex evh 320 bl
                             </p>
@@ -985,7 +985,7 @@
                             </div>
                         </div>
                         <div class="product-box__inner">
-                            <div class="product-box__gallery">
+                            <div class="product-box__gallery skeleton">
                                 <div class="zoom-box">
                                     <div class="zoom-img">
                                         <div class="zoom-cursor"></div>
@@ -1045,7 +1045,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product-box__info">
+                            <div class="product-box__info skeleton">
                                 <div class="product-box__header">
                                     <div class="product-box__tools">
                                         <div class="product-box__available">
@@ -1154,7 +1154,7 @@
                                                 клик</button>
                                         </div>
                                     </div>
-                                    <div class="product-box__item product-box__item--terms">
+                                    <div class="product-box__item product-box__item--terms ">
                                         <ul class="product-box__guarantee">
                                             <li class="product-box__guarantee-item">
                                                 <img src="./img/icons/guarantee.svg" alt="">
@@ -1241,7 +1241,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="product-box__item product-box__item--properties">
+                                    <div class="product-box__item product-box__item--properties ">
 
                                         <div class="product-box__properties-box">
                                             <h5 class="product-box__properties-title">
@@ -1450,7 +1450,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="product-box__item product-box__item--delivery">
+                                    <div class="product-box__item product-box__item--delivery ">
                                         <div class="product-box__delivery-options">
                                             <h5 class="product-box__delivery-title">
                                                 Способы получения заказа
@@ -1484,7 +1484,7 @@
                     <input id="productChars" type="radio" name="product-tab">
                     <input id="productDelivery" type="radio" name="product-tab">
                     <input id="productGuarantee" type="radio" name="product-tab">
-                    <div class="product-tabs__inner">
+                    <div class="product-tabs__inner skeleton">
                         <ul class="product-tabs__items">
                             <li class="product-tabs__item active">
                                 <label for="productAbout">
@@ -1517,7 +1517,7 @@
 
             <div class="product__info">
                 <div class="container">
-                    <div class="product-info__inner active about">
+                    <div class="product-info__inner active about skeleton">
 
                         <div class="product-info__item product-name">
                             <h4 class="product-info__title ">
@@ -1604,7 +1604,7 @@
 
                     </div>
 
-                    <div class="product-info__inner properties">
+                    <div class="product-info__inner properties skeleton">
                         <div class="product-info__item properties properties--main">
 
                             <ul class="product-info__properties-list">
@@ -1870,7 +1870,7 @@
                         </div>
                     </div>
 
-                    <div class="product-info__inner delivery-payment">
+                    <div class="product-info__inner delivery-payment skeleton">
 
                         <div class="product-info__item payment">
                             <h4 class="product-info__title">
@@ -1915,7 +1915,7 @@
 
                     </div>
 
-                    <div class="product-info__inner guarantee">
+                    <div class="product-info__inner guarantee skeleton">
 
                         <a class="product-info__guarantee-item" href="#">
                             <div class="product-info__guarantee-text">
@@ -1949,7 +1949,7 @@
 
             <div class="recs">
                 <div class="container">
-                    <div class="title">
+                    <div class="title skeleton">
                         <h2>
                             Ранее вы смотрели
                         </h2>
