Начал делать адаптив главной страницы

--- a/product.html
+++ b/product.html
@@ -994,6 +994,15 @@
                                 </div>
 
                                 <div class="swiper slider-product">
+                                    <div class="label-container">
+                                        <div class="label" style="background-color: #FF8023;">
+                                            Новинка
+                                        </div>
+                                        <div class="label" style="background-color: #D44F68;">
+                                            Комплектом дешевле
+                                        </div>
+                                    </div>
+                                    
                                     <img class="country lazyload" data-src="./img/icons/countries/italy.svg" alt="">
                                     <div class="swiper-wrapper slider-product-wrapper">
                                         <div class="swiper-slide slider-product-slide">
