--- a/index.html
+++ b/index.html
@@ -973,27 +973,6 @@
                     </div>
                 </div>
             </div>
-            <div class="header__side">
-                <div class="header__side-inner">
-                    <button class="header__close-btn">
-                        <img src="./img/icons/close-icon.svg" alt="">
-                    </button>
-                    <div class="header-city">
-                        <div class="header-city__icon">
-                            <img src="./img/icons/city-icon.svg" alt="City icon">
-                        </div>
-                        <div class="header-city__text">
-                            <p class="header-city__descr">
-                                Город
-                            </p>
-                            <div class="header-city__select">
-                                <button class="header-city__button">Екатеринбург</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
         </header>
 
         <main>
@@ -1134,6 +1113,9 @@
                             </a>
                         </div>
                     </div>
+                    <a class="rect-btn rect-btn--popular blue" href="#">
+                        Посмотреть все категории
+                    </a>
                 </div>
             </section>
 
@@ -1216,6 +1198,101 @@
                         <div class="swiper-button-prev categories-button-prev"></div>
                     </div>
 
+                </div>
+            </section>
+
+            <section class="complects">
+                <div class="container">
+                    <div class="title title--center">
+                        <h2>Популярные готовые комплекты</h2>
+                        <p>Комплекты, сформированные под ваши нужды</p>
+                    </div>
+                    <div class="complects__inner">
+                        <a class="complects__item" href="./product.html">
+                            <div class="complects__item-label">
+                                -37%
+                            </div>
+                            <div class="complects__item-img">
+                                <img src="./img/complects/1.jpg" alt="">
+                            </div>
+                            <div class="complects__item-info">
+                                <div class="complects__item-descr">
+                                    <p class="complects__item-name">
+                                        Для дома и дачи
+                                    </p>
+                                    <p class="complects__item-quantity">
+                                        2 товара
+                                    </p>
+                                </div>
+                                <div class="complects__item-cost">
+                                    <p class="complects__item-old-price">
+                                        16 781 ₽
+                                    </p>
+                                    <p class="complects__item-price">
+                                        11 243 ₽
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                        <a class="complects__item" href="./product.html">
+                            <div class="complects__item-label">
+                                -37%
+                            </div>
+                            <div class="complects__item-img">
+                                <img src="./img/complects/2.jpg" alt="">
+                            </div>
+                            <div class="complects__item-info">
+                                <div class="complects__item-descr">
+                                    <p class="complects__item-name">
+                                        Для дома и дачи
+                                    </p>
+                                    <p class="complects__item-quantity">
+                                        2 товара
+                                    </p>
+                                </div>
+                                <div class="complects__item-cost">
+                                    <p class="complects__item-old-price">
+                                        16 781 ₽
+                                    </p>
+                                    <p class="complects__item-price">
+                                        11 243 ₽
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                        <a class="complects__item" href="./product.html">
+                            <div class="complects__item-label">
+                                -37%
+                            </div>
+                            <div class="complects__item-img">
+                                <img src="./img/complects/3.jpg" alt="">
+                            </div>
+                            <div class="complects__item-info">
+                                <div class="complects__item-descr">
+                                    <p class="complects__item-name">
+                                        Для дома и дачи
+                                    </p>
+                                    <p class="complects__item-quantity">
+                                        2 товара
+                                    </p>
+                                </div>
+                                <div class="complects__item-cost">
+                                    <p class="complects__item-old-price">
+                                        16 781 ₽
+                                    </p>
+                                    <p class="complects__item-price">
+                                        11 243 ₽
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <a class="complects__link" href="#">
+                        Смотреть все комплекты
+                        <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M11.4596 5.45962C11.7135 5.20578 11.7135 4.79422 11.4596 4.54038L7.32304 0.403806C7.0692 0.149965 6.65765 0.149965 6.40381 0.403806C6.14997 0.657647 6.14997 1.0692 6.40381 1.32304L10.0808 5L6.40381 8.67696C6.14997 8.9308 6.14997 9.34235 6.40381 9.59619C6.65765 9.85003 7.0692 9.85003 7.32304 9.59619L11.4596 5.45962ZM0 5.65H11V4.35H0V5.65Z" fill="#282739"></path>
+                        </svg>
+                    </a>
                 </div>
             </section>
 
